--- a/env.example
+++ b/env.example
@@ -1,3 +1,33 @@
+# =============================================================================
+# PRODUCTION DEPLOYMENT CONFIGURATION
+# =============================================================================
+
+# Environment (development/production)
+ENVIRONMENT=development
+
+# Base URLs (update these for production)
+BASE_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
+
+# Production URLs (update these when deploying)
+# GITHUB_CALLBACK_URL=https://your-backend-domain.com/api/auth/github/callback
+# ALLOWED_ORIGINS=http://localhost:3000,https://your-frontend-domain.com
+
+# =============================================================================
+# CUSTOM DOMAIN CONFIGURATION (repotorpedo.com)
+# =============================================================================
+
+# For repotorpedo.com deployment
+# ENVIRONMENT=production
+# BASE_URL=https://api.repotorpedo.com
+# FRONTEND_URL=https://repotorpedo.com
+# GITHUB_CALLBACK_URL=https://api.repotorpedo.com/api/auth/github/callback
+# ALLOWED_ORIGINS=https://repotorpedo.com,https://www.repotorpedo.com
+
+# =============================================================================
+# REQUIRED CREDENTIALS
+# =============================================================================
+
 # GitHub OAuth (Required)
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
@@ -7,10 +37,10 @@ OPENAI_API_KEY=your_openai_api_key
 
 # App Configuration
 SECRET_KEY=your_secret_key_here
-BASE_URL=http://localhost:8000
-FRONTEND_URL=http://localhost:3000
 
-# Platform OAuth Credentials (Optional - for seamless integration)
+# =============================================================================
+# OPTIONAL PLATFORM INTEGRATIONS
+# =============================================================================
 
 # Vercel OAuth
 VERCEL_CLIENT_ID=your_vercel_client_id
@@ -36,7 +66,9 @@ CIRCLECI_CLIENT_SECRET=your_circleci_client_secret
 TRAVIS_CLIENT_ID=your_travis_client_id
 TRAVIS_CLIENT_SECRET=your_travis_client_secret
 
-# Enterprise Cloud Platforms (Optional)
+# =============================================================================
+# ENTERPRISE CLOUD PLATFORMS (Optional)
+# =============================================================================
 
 # AWS Configuration
 AWS_ACCESS_KEY_ID=your_aws_access_key
@@ -59,4 +91,36 @@ DIGITALOCEAN_TOKEN=your_digitalocean_token
 RENDER_API_KEY=your_render_api_key
 
 # Fly.io
-FLY_API_TOKEN=your_fly_api_token 
+FLY_API_TOKEN=your_fly_api_token
+
+# =============================================================================
+# DEPLOYMENT PLATFORM SPECIFIC
+# =============================================================================
+
+# For Render deployment
+# ENVIRONMENT=production
+# BASE_URL=https://your-backend-name.onrender.com
+# FRONTEND_URL=https://your-frontend-name.onrender.com
+# GITHUB_CALLBACK_URL=https://your-backend-name.onrender.com/api/auth/github/callback
+# ALLOWED_ORIGINS=https://your-frontend-name.onrender.com
+
+# For Railway deployment
+# ENVIRONMENT=production
+# BASE_URL=https://your-app-name.railway.app
+# FRONTEND_URL=https://your-frontend-domain.com
+# GITHUB_CALLBACK_URL=https://your-app-name.railway.app/api/auth/github/callback
+# ALLOWED_ORIGINS=https://your-frontend-domain.com
+
+# For Vercel deployment
+# ENVIRONMENT=production
+# BASE_URL=https://your-backend-domain.com
+# FRONTEND_URL=https://your-app.vercel.app
+# GITHUB_CALLBACK_URL=https://your-backend-domain.com/api/auth/github/callback
+# ALLOWED_ORIGINS=https://your-app.vercel.app
+
+# For repotorpedo.com with subdomain API
+# ENVIRONMENT=production
+# BASE_URL=https://api.repotorpedo.com
+# FRONTEND_URL=https://repotorpedo.com
+# GITHUB_CALLBACK_URL=https://api.repotorpedo.com/api/auth/github/callback
+# ALLOWED_ORIGINS=https://repotorpedo.com,https://www.repotorpedo.com 
