--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,15 @@
 services:
   - type: web
-    name: github-uploader-backend
+    name: repotorpedo-backend
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    rootDir: server
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
+      - key: ENVIRONMENT
+        value: production
       - key: GITHUB_CLIENT_ID
         sync: false
       - key: GITHUB_CLIENT_SECRET
@@ -15,12 +18,21 @@ services:
         sync: false
       - key: OPENAI_API_KEY
         sync: false
+      - key: BASE_URL
+        value: https://repotorpedo-backend.onrender.com
+      - key: GITHUB_CALLBACK_URL
+        value: https://repotorpedo-backend.onrender.com/api/auth/github/callback
+      - key: ALLOWED_ORIGINS
+        value: https://repotorpedo-frontend.onrender.com
 
   - type: web
-    name: github-uploader-frontend
+    name: repotorpedo-frontend
     env: static
-    buildCommand: npm install && npm run build
-    staticPublishPath: ./build
+    buildCommand: cd client && npm install && npm run build
+    staticPublishPath: ./client/build
+    rootDir: .
     envVars:
       - key: REACT_APP_API_URL
-        value: https://github-uploader-backend.onrender.com
+        value: https://repotorpedo-backend.onrender.com
+      - key: REACT_APP_ENVIRONMENT
+        value: production
