feat: Configure production domains and add comprehensive UI improvements
- Configure frontend to use repotorpedo.com and backend to use api.repotorpedo.com
- Remove all localhost configurations and force production URLs
- Add new components: LandingPage, DeploySuccess, DeploymentHistory, Settings, ContactSupport
- Add dark mode toggle and internationalization support
- Add loading spinner and improved error handling
- Update CORS configuration for production domains
- Add branding assets (logo, favicon)
- Update OAuth callback URLs for production
- Improve user experience with better onboarding and feedback

--- a/env.example
+++ b/env.example
@@ -3,11 +3,11 @@
 # =============================================================================
 
 # Environment (development/production)
-ENVIRONMENT=development
+# ENVIRONMENT=development
 
 # Base URLs (update these for production)
-BASE_URL=http://localhost:8000
-FRONTEND_URL=http://localhost:3000
+# BASE_URL=http://localhost:8000
+# FRONTEND_URL=http://localhost:3000
 
 # Production URLs (update these when deploying)
 # GITHUB_CALLBACK_URL=https://your-backend-domain.com/api/auth/github/callback
@@ -18,11 +18,11 @@ FRONTEND_URL=http://localhost:3000
 # =============================================================================
 
 # For repotorpedo.com deployment
-# ENVIRONMENT=production
-# BASE_URL=https://api.repotorpedo.com
-# FRONTEND_URL=https://repotorpedo.com
-# GITHUB_CALLBACK_URL=https://api.repotorpedo.com/api/auth/github/callback
-# ALLOWED_ORIGINS=https://repotorpedo.com,https://www.repotorpedo.com
+ENVIRONMENT=production
+BASE_URL=https://api.repotorpedo.com
+FRONTEND_URL=https://repotorpedo.com
+GITHUB_CALLBACK_URL=https://api.repotorpedo.com/api/auth/github/callback
+ALLOWED_ORIGINS=https://repotorpedo.com,https://www.repotorpedo.com
 
 # =============================================================================
 # REQUIRED CREDENTIALS
