--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "build:dev": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "eject": "react-scripts eject",
     "analyze": "npm run build && npx serve -s build"
   },
