--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Lint backend
         run: |
-          pip install flake8 black
+          pip install flake8 black==23.3.0
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           black --check .
 
