--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,10 @@
   },
   "scripts": {
     "start": "NODE_OPTIONS='--no-deprecation' react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build && npm run analyze:size",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "build:dev": "react-scripts build",
     "build:analyze": "npm run build && npx serve -s build",
     "analyze:size": "npx webpack-bundle-analyzer build/static/js/*.js --no-open --report --mode=static --report build/bundle-report.html",
-    "preload-critical": "npm run build && npx critical --src build --dest build --inline --minify --extract --width 1300 --height 900",
     "test": "react-scripts test",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
@@ -48,7 +47,6 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "critical": "^6.1.0"
+    "webpack-bundle-analyzer": "^4.10.1"
   }
 }
